# elertan_cheat_base

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/assault_cube/simple_godmode/injector/: .gitignore  Cargo.toml
examples/assault_cube/simple_godmode/injector/src/: main.rs
examples/simple_injection/: Cargo.toml
examples/simple_injection/src/: lib.rs
examples/simple_injector/: Cargo.toml  README.md
examples/simple_injector/src/: main.rs
playground/: Cargo.toml
playground/src/: lib.rs
src/: lib.rs
src/in_process/: entrypoint.rs  helpers.rs  memory.rs  mod.rs
src/in_process/hooks/d3d9/: mod.rs
src/injection/: console.rs  entrypoint.rs  helpers.rs  memory.rs  mod.rs
src/injection/hooks/: mod.rs
src/injection/hooks/d3d9/: mod.rs
src/injection/hooks/direct_3d9/: mod.rs
src/injection/hooks/direct_d3d9/: mod.rs
tools/cli_dll_injector/: Cargo.toml
tools/cli_dll_injector/src/: main.rs
