[package]
name = "elertan_cheat_base"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.1"
detour = "0.7.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "consoleapi", "wincon", "memoryapi", "d3d9", "d3d9types"] }
