[package]
name = "playground"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elertan_cheat_base = { path = ".." }
fern = "0.6.0"
chrono = "0.4.15"
once_cell = "1.4.1"
