[package]
name = "cli_dll_injector"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elertan_cheat_base = { path = "../.." }
structopt = "0.3.20"
thiserror = "1.0.20"
sysinfo = "0.15.3"
