[package]
name = "injector"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elertan_cheat_base = { path = "../../../" }
log = "0.4.11"
simple_logger = "1.11.0"
